--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Routines</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   
   <body>
