--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 
   <body>
-    Your content here...1
+    <script>
+    document.ontouchmove = function (e) {
+       e.preventDefault();
+    }
+    </script>
+    
+    Your content here...2
   </body>
 </html>
