--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       ctx.fillRect(this.x, this.y, this.width, this.height);
     }
     </script>
-    
-    <h1>My Routines</h1>
+    <div class="header">
+       <h1>My Routines</h1>
+    </div>
   </body>
 </html>
